--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-progress": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.6",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@vercel/analytics": "^1.5.0",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
