--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-progress": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tailwindcss/typography": "^0.5.16",
     "@tinymce/tinymce-react": "^5.1.1",
     "@vercel/analytics": "^1.5.0",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
