--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tinymce/tinymce-react": "^5.1.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
