--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dompurify": "^3.2.6",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.474.0",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
